--- a/coursework/css/style.css
+++ b/coursework/css/style.css
@@ -1,110 +1,55 @@
-*{ margin: 0; padding: 0; }
+*{ margin: 0; padding: 0; } /* Reset */
 
 body{
-	background: #f5f5f5;
+	color: rgba(0, 0, 0, 0.75);
+	font-family: "Courier", monospace;
+	background: rgb(80, 100, 100);
 }
 
-article{
-	overflow: auto;
-	background: #fff;
+article{			
+	background: #fff6d9 url('../img/linetile.png');
 	width: 70%;
-	height: 90%;
 	margin: 20px auto;
 	box-shadow: 0 0 5px rgba(0,0,0,0.25),
-	5px 5px 0 white,
-	5px 5px 5px rgba(0,0,0,0.25),
-	10px 10px 0 white,
-	10px 10px 5px  rgba(0,0,0,0.25),
-
-
-	inset 0 60px 0 white,
-	inset 0 61px 0 #00b0e5,
-	inset 0 80px 0 white,
-	inset 0 81px 0 #00b0e5,
-	inset 0 100px 0 white,
-	inset 0 101px 0 #00b0e5,
-	inset 0 120px 0 white,
-	inset 0 121px 0 #00b0e5,
-	inset 0 140px 0 white,
-	inset 0 141px 0 #00b0e5,
-	inset 0 160px 0 white,
-	inset 0 161px 0 #00b0e5,
-	inset 0 180px 0 white,
-	inset 0 181px 0 #00b0e5,
-	inset 0 200px 0 white,
-	inset 0 201px 0 #00b0e5,
-	inset 0 220px 0 white,
-	inset 0 221px 0 #00b0e5,
-	inset 0 240px 0 white,
-	inset 0 241px 0 #00b0e5,
-	inset 0 260px 0 white,
-	inset 0 261px 0 #00b0e5,
-	inset 0 280px 0 white,
-	inset 0 281px 0 #00b0e5,
-	inset 0 300px 0 white,
-	inset 0 301px 0 #00b0e5,
-	inset 0 320px 0 white,
-	inset 0 321px 0 #00b0e5,
-	inset 0 340px 0 white,
-	inset 0 341px 0 #00b0e5,
-	inset 0 360px 0 white,
-	inset 0 361px 0 #00b0e5,
-	inset 0 380px 0 white,
-	inset 0 381px 0 #00b0e5,
-	inset 0 400px 0 white,
-	inset 0 401px 0 #00b0e5,
-	inset 0 420px 0 white,
-	inset 0 421px 0 #00b0e5,
-	inset 0 440px 0 white,
-	inset 0 441px 0 #00b0e5,
-	inset 0 460px 0 white,
-	inset 0 461px 0 #00b0e5,
-	inset 0 480px 0 white,
-	inset 0 481px 0 #00b0e5,
-	inset 0 500px 0 white,
-	inset 0 501px 0 #00b0e5,
-	inset 0 520px 0 white,
-	inset 0 521px 0 #00b0e5,
-	inset 0 540px 0 white,
-	inset 0 541px 0 #00b0e5,
-	inset 0 560px 0 white,
-	inset 0 561px 0 #00b0e5,
-	inset 0 580px 0 white,
-	inset 0 581px 0 #00b0e5,
-	inset 0 600px 0 white,
-	inset 0 601px 0 #00b0e5,
-	inset 0 620px 0 white,
-	inset 0 621px 0 #00b0e5,
-	inset 0 640px 0 white,
-	inset 0 641px 0 #00b0e5,
-	inset 0 660px 0 white,
-	inset 0 661px 0 #00b0e5,
-	inset 0 680px 0 white,
-	inset 0 681px 0 #00b0e5;
+				5px 5px 0 #fff6d9,
+				5px 5px 5px rgba(0,0,0,0.25),
+				10px 10px 0 #fff6d9,
+				10px 10px 5px  rgba(0,0,0,0.25),
+				inset 0 60px 0 #fff6d9;
 }
 
 section.text{
-	float: left;
-	width: 90%;
-	margin-left: 10%;
-	padding: 60px 2em 0 2em;
-	border-left: 1px solid #e5000c;
+	display: inline-block;
+	padding: 2em 4em 0 4em;
+
 	-webkit-box-sizing:border-box;
-	   -moz-box-sizing:border-box;
+	   -moz-box-sizing:border-box; 
 	   		box-sizing:border-box;
 }
 
-section.text h1{
+section.text time{
+	float: left;
+}
+
+section.text .name{
+	margin: 0;
+	float: right;
+	font-family: "Georgia", "Times New Roman", serif;
 	font-style: italic;
+}
+
+section.text h1{
 	text-align: center;
 	font-size: 1.2em;
-	margin-bottom: 20px;
+	line-height: 20px;
+	margin: 2.5em 0 20px;
+	font-weight: bolder;
 }
 
 section.text p{
-	font-size: 1em;
+	font-size: 1.125em;
 	margin-bottom: 20px;
-	line-height: 20px;	
+	line-height: 20px;
 }
 
 section.text p:before{
@@ -112,22 +57,27 @@ section.text p:before{
 	margin-left: 2em;			
 }
 
-ul{
-	position: fixed;
-	height: 100%;
-	width: 7%;
-	-webkit-box-sizing:border-box;
-	   -moz-box-sizing:border-box; 
-	   		box-sizing:border-box;
+section.text mark{
+	padding: 0 0.5em;
+	border-radius: 25px 0px / 50px 0px;
 }
 
-ul li{
-	display: block;
-	list-style: none;			
-	border-radius: 50%;
-	box-shadow: inset 0 0 5px rgba(0,0,0,0.5);
-	width: 25px;
-	height: 25px;
-	margin: 100% 35%;
-	background: white;
+section.text mark:hover{
+	cursor: pointer;
+	box-shadow:0 0 0 1px rgba(0, 0, 0, 0.35);
+}
+
+section.text mark.ref{	
+	background-color: rgba(255, 255, 0, 0.5);
+}
+
+section.text em{
+	font-weight: bolder;
+	font-style: normal;
+}
+
+section.text em:hover{
+	opacity: 0.9;
+	cursor: pointer;	
+	text-decoration: underline;
 }
