--- a/coursework/css/style.css
+++ b/coursework/css/style.css
@@ -13,56 +13,142 @@ body{
 	background: rgb(80, 100, 100);
 }
 
+/* Header */
+
 header{
+	z-index: 1337;
 	top: 0;
 	width: 100%;
+	padding: 0 200px;
 	background-color: rgb(181, 10, 42);	
 	position: fixed;	
 	border-top: 10px solid rgb(211, 0, 42);
 	border-bottom: 10px solid rgb(211, 0, 42);
-	box-shadow: 0 5px 0 rgba(0,0,0,0.1);
+
+	-webkit-box-shadow: 0 5px 0 rgba(0,0,0,0.1);
+	   -moz-box-shadow: 0 5px 0 rgba(0,0,0,0.1);
+			box-shadow: 0 5px 0 rgba(0,0,0,0.1);
 }
 
 header h1, header .links{
 	display: inline-block;
 	margin: 10px;
-	width: 30%;
 	color: #FFFFFF;
 	text-align: center;
 	font-family: Helvetica, Arial, serif;
-	text-transform: uppercase;
-	-webkit-transition: all 0.05s linear;	
+	text-transform: uppercase;	
+}
+
+header .links a{
+	-webkit-transition: all 0.05s linear;
+	   -moz-transition: all 0.05s linear;
+	     -o-transition: all 0.05s linear;
+	     	transition: all 0.05s linear;
 }
 
 header h1{
+	float: right;
 	cursor: default;
 	font-size: 2.4em;
 	text-shadow: 1px 1px 0 rgb(211, 0, 42), 2px 2px 0 rgb(211, 0, 42),
 				 3px 3px 0 rgb(211, 0, 42), 4px 4px 0 rgb(211, 0, 42),
-				 5px 5px 0 rgb(211, 0, 42), 6px 6px 0 rgb(211, 0, 42),
-				 7px 7px 0 rgb(211, 0, 42), 8px 8px 0 rgb(211, 0, 42);
+				 5px 5px 0 rgb(211, 0, 42), 6px 6px 0 rgb(211, 0, 42);
+}
+
+header .links{
+	float: left;
 }
 
 header .links a{
-	margin: 0 auto;
-	padding: 0.2em 0;
+	margin: 0 6px 6px 10px;
+	padding: 0.2em 0.5em;
 	display: block;
-	width: 60%;
+	float: left;
 	color: #FFFFFF;
 	background-color: rgba(0,0,0,0.1);
-	border-radius: 5px;
 	text-decoration: none;
-	font-size: 1.9em;
+	font-size: 1.45em;
+	font-weight: bolder;
+
+	-webkit-box-shadow: 1px 1px 0 rgb(211, 0, 42), 2px 2px 0 rgb(211, 0, 42),
+						3px 3px 0 rgb(211, 0, 42), 4px 4px 0 rgb(211, 0, 42),
+						5px 5px 0 rgb(211, 0, 42), 6px 6px 0 rgb(211, 0, 42);
+	   -moz-box-shadow: 1px 1px 0 rgb(211, 0, 42), 2px 2px 0 rgb(211, 0, 42),
+						3px 3px 0 rgb(211, 0, 42), 4px 4px 0 rgb(211, 0, 42),
+						5px 5px 0 rgb(211, 0, 42), 6px 6px 0 rgb(211, 0, 42);
+			box-shadow: 1px 1px 0 rgb(211, 0, 42), 2px 2px 0 rgb(211, 0, 42),
+						3px 3px 0 rgb(211, 0, 42), 4px 4px 0 rgb(211, 0, 42),
+						5px 5px 0 rgb(211, 0, 42), 6px 6px 0 rgb(211, 0, 42);
 }
 
-header .links a:hover{
-	background-color: rgba(0,0,0,0.05);
+header .links a:hover, header .links .current{
+	margin: 6px 0 0 16px;	
+	background-color: rgba(0,0,0,0.15);
+	box-shadow: none;
 }
 
-.cv, .litreview{
+.home, .cv, .litreview{
 	width: 70%;
 	margin: 20px auto;	
 }
+
+/* Home */
+
+.home{
+	width: 900px;
+	overflow: auto;
+}
+
+.home a{
+	color: rgba(0, 0, 0, 0.74902);
+	text-decoration: none;
+
+	-webkit-transition: all 0.05s linear;
+	   -moz-transition: all 0.05s linear;
+	     -o-transition: all 0.05s linear;
+	     	transition: all 0.05s linear;
+}
+
+.home a:hover{
+	opacity: 0.9;
+}
+
+.home .tile{
+	display: inline-block;
+	float: left;
+	margin: 0 25px 25px 0;
+	height: 300px;
+	width: 200px;
+	background-color: rgba(0,0,0,0.1);
+}
+
+.home .tile:nth-child(2){ /* Lit Review tile */ 
+	line-height: 20px;
+	padding: 80px 15px 0;
+}
+
+.home .tile h1{
+	margin-bottom: 20px;
+}
+
+.home .tile p{
+	overflow: hidden;
+	height: 100px;
+}
+
+.home .tile p:before{ 
+	position: absolute;
+	content: '';
+	display: block;
+	width: 170px;
+	height: 100px;
+
+	-webkit-box-shadow: inset 0 -20px 10px -10px #fff6d9;
+	   -moz-box-shadow: inset 0 -20px 10px -10px #fff6d9;
+			box-shadow: inset 0 -40px 10px -10px #fff6d9;
+}
+
+/* CV */
 
 .cv{
 	padding: 2em;
@@ -105,11 +191,22 @@ header .links a:hover{
 .cv .info h2{}
 
 .cv .content{
+	overflow: auto;
 	margin-bottom: 2em;
 }
 
+.cv .content .block{
+	float: left;
+	width: 50%;
+	padding: 1em;
+}
+
+.cv .content ul li{
+	list-style-position: inside;
+}
+
 .cv .I ul li{
-	list-style: none;
+	list-style-type: none;
 }
 
 .cv .I ul li:before{
@@ -118,7 +215,9 @@ header .links a:hover{
 	margin: 0 0.25em;
 }
 
-.litreview{
+/* Lit Review */
+
+.litreview, .home .tile:nth-child(2){
 	font-family: "Courier", monospace;
 	background: #fff6d9 url('../img/linetile.png'); 
 
