--- a/webf1/coursework/css/style.css
+++ b/webf1/coursework/css/style.css
@@ -8,7 +8,6 @@
 }
 
 body{
-	padding: 10% 0;
 	color: rgba(0, 0, 0, 0.75);
 	background: rgb(80, 100, 100);
 }
@@ -19,7 +18,6 @@ header{
 	z-index: 1337;
 	top: 0;
 	width: 100%;
-	padding: 0 200px;
 	background-color: rgb(181, 10, 42);	
 	position: fixed;	
 	border-top: 10px solid rgb(211, 0, 42);
@@ -30,20 +28,18 @@ header{
 			box-shadow: 0 5px 0 rgba(0,0,0,0.1);
 }
 
-header h1, header .links{
+header nav{
+	width: 900px;
+	margin: 0 auto;
+}
+
+header nav h1, header nav .links{
 	display: inline-block;
 	margin: 10px;
 	color: #FFFFFF;
 	text-align: center;
 	font-family: Helvetica, Arial, serif;
 	text-transform: uppercase;	
-}
-
-header .links a{
-	-webkit-transition: all 0.05s linear;
-	   -moz-transition: all 0.05s linear;
-	     -o-transition: all 0.05s linear;
-	     	transition: all 0.05s linear;
 }
 
 header h1{
@@ -79,6 +75,11 @@ header .links a{
 			box-shadow: 1px 1px 0 rgb(211, 0, 42), 2px 2px 0 rgb(211, 0, 42),
 						3px 3px 0 rgb(211, 0, 42), 4px 4px 0 rgb(211, 0, 42),
 						5px 5px 0 rgb(211, 0, 42), 6px 6px 0 rgb(211, 0, 42);
+
+	-webkit-transition: all 0.05s linear;
+	   -moz-transition: all 0.05s linear;
+	     -o-transition: all 0.05s linear;
+	     	transition: all 0.05s linear;
 }
 
 header .links a:hover, header .links .current{
@@ -87,15 +88,14 @@ header .links a:hover, header .links .current{
 	box-shadow: none;
 }
 
-.home, .cv, .litreview{
-	width: 70%;
-	margin: 20px auto;	
+.home, .cv, .litreview{	
+	width: 900px;
+	margin: 100px auto;	
 }
 
 /* Home */
 
 .home{
-	width: 900px;
 	overflow: auto;
 }
 
@@ -103,10 +103,10 @@ header .links a:hover, header .links .current{
 	color: rgba(0, 0, 0, 0.74902);
 	text-decoration: none;
 
-	-webkit-transition: all 0.05s linear;
-	   -moz-transition: all 0.05s linear;
-	     -o-transition: all 0.05s linear;
-	     	transition: all 0.05s linear;
+	-webkit-transition: opacity 0.05s linear;
+	   -moz-transition: opacity 0.05s linear;
+	     -o-transition: opacity 0.05s linear;
+	     	transition: opacity 0.05s linear;
 }
 
 .home a:hover{
@@ -123,6 +123,9 @@ header .links a:hover, header .links .current{
 }
 
 .home .tile:nth-child(2){ /* Lit Review tile */ 
+	margin: 2px 40px 40px 0;
+	height: 283px;
+	width: 185px;
 	line-height: 20px;
 	padding: 80px 15px 0;
 }
@@ -133,15 +136,15 @@ header .links a:hover, header .links .current{
 
 .home .tile p{
 	overflow: hidden;
-	height: 100px;
+	height: 80px;
 }
 
 .home .tile p:before{ 
 	position: absolute;
 	content: '';
 	display: block;
-	width: 170px;
-	height: 100px;
+	width: 150px;
+	height: 80px;
 
 	-webkit-box-shadow: inset 0 -20px 10px -10px #fff6d9;
 	   -moz-box-shadow: inset 0 -20px 10px -10px #fff6d9;
@@ -221,12 +224,12 @@ header .links a:hover, header .links .current{
 	font-family: "Courier", monospace;
 	background: #fff6d9 url('../img/linetile.png'); 
 
-	-webkit-box-shadow: 0 0 5px rgba(0,0,0,0.25), 5px 5px 0 #fff6d9, 5px 5px 5px rgba(0,0,0,0.25),
-						10px 10px 0 #fff6d9, 10px 10px 5px  rgba(0,0,0,0.25), inset 0 60px 0 #fff6d9;
-	   -moz-box-shadow: 0 0 5px rgba(0,0,0,0.25), 5px 5px 0 #fff6d9, 5px 5px 5px rgba(0,0,0,0.25),
-					   	10px 10px 0 #fff6d9, 10px 10px 5px  rgba(0,0,0,0.25), inset 0 60px 0 #fff6d9;
-			box-shadow: 0 0 5px rgba(0,0,0,0.25), 5px 5px 0 #fff6d9, 5px 5px 5px rgba(0,0,0,0.25),
-				    	10px 10px 0 #fff6d9, 10px 10px 5px  rgba(0,0,0,0.25), inset 0 60px 0 #fff6d9, inset 0 -30px 0 #fff6d9;
+	-webkit-box-shadow: 0 0 0 2px rgba(0,0,0,0.15), 5px 5px 0 #fff6d9, 5px 5px 0 2px rgba(0,0,0,0.15),
+				    	10px 10px 0 #fff6d9, 10px 10px 0 2px  rgba(0,0,0,0.15), inset 0 60px 0 #fff6d9, inset 0 -30px 0 #fff6d9;
+       -moz-box-shadow: 0 0 0 2px rgba(0,0,0,0.15), 5px 5px 0 #fff6d9, 5px 5px 0 2px rgba(0,0,0,0.15),
+				    	10px 10px 0 #fff6d9, 10px 10px 0 2px  rgba(0,0,0,0.15), inset 0 60px 0 #fff6d9, inset 0 -30px 0 #fff6d9;
+			box-shadow: 0 0 0 2px rgba(0,0,0,0.15), 5px 5px 0 #fff6d9, 5px 5px 0 2px rgba(0,0,0,0.15),
+				    	10px 10px 0 #fff6d9, 10px 10px 0 2px  rgba(0,0,0,0.15), inset 0 60px 0 #fff6d9, inset 0 -30px 0 #fff6d9;
 }
 
 .litreview section.text{
