--- a/webf1/coursework/css/style.css
+++ b/webf1/coursework/css/style.css
@@ -90,7 +90,7 @@ header .links a:hover, header .links .current{
 
 .home, .cv, .litreview{	
 	width: 900px;
-	margin: 100px auto;	
+	margin: 115px auto;	
 }
 
 /* Home */
@@ -122,7 +122,11 @@ header .links a:hover, header .links .current{
 	background-color: rgba(0,0,0,0.1);
 }
 
-.home .tile:nth-child(2){ /* Lit Review tile */ 
+.home .tile:nth-child(1), .home .tile:nth-child(6){
+	width: 400px;
+}
+
+.home .litreviewtile{
 	margin: 2px 40px 40px 0;
 	height: 283px;
 	width: 185px;
@@ -130,25 +134,51 @@ header .links a:hover, header .links .current{
 	padding: 80px 15px 0;
 }
 
-.home .tile h1{
+.home .litreviewtile h1{
 	margin-bottom: 20px;
 }
 
-.home .tile p{
+.home .litreviewtile p{
 	overflow: hidden;
 	height: 80px;
 }
 
-.home .tile p:before{ 
-	position: absolute;
-	content: '';
-	display: block;
-	width: 150px;
-	height: 80px;
+@font-face { /* Custom font for the worklog tile by Pablo Impallari - http://www.google.com/webfonts/specimen/Lobster */
+	font-family: 'Lobster';
+	font-style: normal;
+	font-weight: 400;
+	src: local('Lobster'), url('../font/lobster.woff') format('woff');
+}
 
-	-webkit-box-shadow: inset 0 -20px 10px -10px #fff6d9;
-	   -moz-box-shadow: inset 0 -20px 10px -10px #fff6d9;
-			box-shadow: inset 0 -40px 10px -10px #fff6d9;
+.home .worklogtile{
+	padding: 8% 0;
+	background-image: url('../img/darth_stripe.png'); /* Made by Ashton @ http://http://subtlepatterns.com */
+	background-color: #23241f;
+	border: 1px solid #99ff66;
+	border-right: 0;
+	border-left: 0;
+
+	-webkit-box-shadow: inset 0 0 5px rgba(255,255,255,0.5), 0 0 10px rgba(0,0,0,0.25);
+	   -moz-box-shadow: inset 0 0 5px rgba(255,255,255,0.5), 0 0 10px rgba(0,0,0,0.25);
+	        box-shadow: inset 0 0 5px rgba(255,255,255,0.5), 0 0 10px rgba(0,0,0,0.25);
+}
+
+.home .worklogtile h1{
+	padding: 10px 0;
+	border-top: 1px dotted rgba(255,255,255,0.25);
+	border-bottom: 1px dotted rgba(255,255,255,0.25);
+	text-align: center;
+	color: #f5f5f5;
+	font-size: 40px;
+	font-family: 'Lobster', Georgia, "Times New Roman", serif;		
+	text-shadow: 0 1px 0 rgba(0,0,0,0.1),
+				 0 0 50px rgba(160, 245, 82, 0.5),
+				 0 0 100px rgba(255, 255, 255, 0.25);
+}
+
+.home .videotile video{
+	width: 100%;
+	height: 100%;
 }
 
 /* CV */
@@ -220,7 +250,7 @@ header .links a:hover, header .links .current{
 
 /* Lit Review */
 
-.litreview, .home .tile:nth-child(2){
+.litreview, .home .litreviewtile{
 	font-family: "Courier", monospace;
 	background: #fff6d9 url('../img/linetile.png'); 
 
@@ -321,3 +351,9 @@ header .links a:hover, header .links .current{
 	cursor: pointer;	
 	text-decoration: underline;
 }
+
+/*
+
+HELLO
+
+*/
