--- a/webf1/coursework/css/style.css
+++ b/webf1/coursework/css/style.css
@@ -126,6 +126,23 @@ header .links a:hover, header .links .current{
 	width: 400px;
 }
 
+.home .cvtile{	
+	background-color: #cfd0c8;
+}
+
+.home .cvtile h1{
+	color: #ffffff;
+}	
+
+.home .cvtile span.link{
+	color: blue;
+	text-decoration: underline;
+}
+
+.home .cvtile .textarea{
+	height: 246px;
+}
+
 .home .litreviewtile{
 	margin: 2px 40px 40px 0;
 	height: 283px;
@@ -183,70 +200,120 @@ header .links a:hover, header .links .current{
 
 /* CV */
 
+.cv, .cv section.head ul li{
+	padding: 2px;
+	border: 1px solid;
+	border-color: #cfd0c8;
+	border-bottom-color: #404040;
+	border-right-color: #404040;
+	background-color: #cfd0c8;
+
+	box-shadow: inset 1px 1px 0 #ffffff, inset -1px -1px 0 #808080;
+}
+
 .cv{
-	padding: 2em;
-	font-family: Arial, sans-serif;
-	background: #f5f5f5;
-	box-shadow: 0 0 5px rgba(0,0,0,0.25);
+	color: #ffffff;
+	font-family: monospace;
 }
-
-.cv section.details{
-	text-align: right;
-}
-
-.cv section.details h1{
-	font-size: 2.5em;
-	font-style: italic;
-	padding-bottom: 0.25em;
-	margin-bottom: 0.25em;
-	border-bottom: 1px solid #000000;
-}
-
-.cv section.details p{
-	padding: 0.25em;
-}
-
-.cv section.details p a{
-	color: #000000;
-	text-decoration: none;
-}
-
-.cv section.details p a:hover{
-	text-decoration: underline;
-}
-
-.cv section.details p.address{
-	white-space: pre;
-}
-
-.cv .info{}
-
-.cv .info h2{}
-
-.cv .content{
+ 
+.cv section.head{
 	overflow: auto;
-	margin-bottom: 2em;
+	padding: 1px;
+	background: -webkit-gradient(linear, left top, right top, from(#122a70), to(#9fc6ed));
+	background: -webkit-linear-gradient(left, #122a70, #9fc6ed);
+	background: -moz-linear-gradient(left, #122a70, #9fc6ed);
+	background: -ms-linear-gradient(left, #122a70, #9fc6ed);
+	background: -o-linear-gradient(left, #122a70, #9fc6ed);
 }
 
-.cv .content .block{
-	float: left;
-	width: 50%;
-	padding: 1em;
+.cv section.head h1{
+	padding-left: 20px;
+	background: url('../img/notepad.png') no-repeat 2px center;
 }
 
-.cv .content ul li{
-	list-style-position: inside;
+.cv section.head ul{
+	margin-right: 1px;
+	float:right;
 }
 
-.cv .I ul li{
+.cv section.head ul li{
+	float:left;
+	margin-left: 2px;
+	width: 16px;
+	height: 16px;
+	color: #000000;
 	list-style-type: none;
 }
 
-.cv .I ul li:before{
-	content: '\2026';
-	font-weight: bolder;
-	margin: 0 0.25em;
+.cv section.head ul li:nth-child(1){
+	box-shadow: inset 1px 1px 0 #ffffff, inset -1px -1px 0 #808080,
+				inset 0 0 0 2px #cfd0c8,inset 2px 0 0 2px #cfd0c8,
+				inset -3px 0 0 2px #cfd0c8, inset 0 -2px 0 2px black;
 }
+
+.cv section.head ul li:nth-child(2){
+	box-shadow: inset 1px 1px 0 #ffffff, inset -1px -1px 0 #808080,
+				inset 0 0 0 2px #cfd0c8,inset 1px 0 0 2px #cfd0c8,
+				inset -1px 0 0 2px #cfd0c8,inset 0px 1px 0 2px #cfd0c8, inset 0 1px 0 4px black
+}
+
+.cv section.head ul li:nth-child(3){
+	line-height: 10px;
+	text-align: center;
+	text-transform: uppercase;
+	font-size: 12px;
+	font-family: Verdana, sans-serif;
+}
+
+.cv ul{
+	overflow: auto;
+}
+
+.cv > ul li{
+	padding: 6px;
+	float: left;
+	list-style: none;
+	color: #000000;
+}
+
+.cv section.textarea{
+	color: #000000;
+	padding: 4px;
+	border: 1px solid;
+	border-color: #404040;
+	border-bottom-color: #cfd0c8;
+	border-right-color: #cfd0c8;
+	background-color: #ffffff;
+
+	box-shadow: inset -1px -1px 0 #ffffff, inset 1px 1px 0 #808080;
+}
+
+.cv section.textarea hr{	
+	border: 0;
+	margin-top: 13px;
+}
+
+.cv section.textarea hr:after{
+	display: block;
+	content: '----------';
+}
+
+.cv section.textarea p{}
+
+.cv section.textarea ul li:before{
+	content: '...';
+	font-size: 5px;
+}
+
+.cv section.textarea h1, .cv section.textarea h2{
+	margin-bottom: 13px;
+}
+
+.cv section.textarea h2{
+	font-style: italic;
+	font-size: 13px;
+}
+
 
 /* Lit Review */
 
