--- a/webf1/coursework/css/style.css
+++ b/webf1/coursework/css/style.css
@@ -132,7 +132,11 @@ header .links a:hover, header .links .current{
 
 .home .cvtile h1{
 	color: #ffffff;
-}	
+}
+
+.home .cvtile .textarea h1{
+	color: #000000;
+}
 
 .home .cvtile span.link{
 	color: blue;
@@ -216,19 +220,27 @@ header .links a:hover, header .links .current{
 	font-family: monospace;
 }
  
-.cv section.head{
+.cv section.head{	
+	cursor: default;
 	overflow: auto;
 	padding: 1px;
 	background: -webkit-gradient(linear, left top, right top, from(#122a70), to(#9fc6ed));
 	background: -webkit-linear-gradient(left, #122a70, #9fc6ed);
-	background: -moz-linear-gradient(left, #122a70, #9fc6ed);
-	background: -ms-linear-gradient(left, #122a70, #9fc6ed);
-	background: -o-linear-gradient(left, #122a70, #9fc6ed);
+	background:    -moz-linear-gradient(left, #122a70, #9fc6ed);
+	background:     -ms-linear-gradient(left, #122a70, #9fc6ed);
+	background:      -o-linear-gradient(left, #122a70, #9fc6ed);
+
+	-webkit-touch-callout: none;
+	  -webkit-user-select: none;
+	   -khtml-user-select: none;
+		 -moz-user-select: none;
+		  -ms-user-select: none;
+			  user-select: none;
 }
 
 .cv section.head h1{
 	padding-left: 20px;
-	background: url('../img/notepad.png') no-repeat 2px center;
+	background: url('../img/notepad.png') no-repeat 1px center;
 }
 
 .cv section.head ul{
@@ -251,10 +263,30 @@ header .links a:hover, header .links .current{
 				inset -3px 0 0 2px #cfd0c8, inset 0 -2px 0 2px black;
 }
 
+.cv section.head ul li:nth-child(1):active{
+	border-color: #404040;
+	border-bottom-color: #cfd0c8;
+	border-right-color: #cfd0c8;
+
+	box-shadow: inset 1px 1px 0 #808080, inset -1px -1px 0 #ffffff,
+				inset 0 0 0 2px #cfd0c8, inset 2px 0 0 2px #cfd0c8,
+				inset -3px 0 0 2px #cfd0c8, inset 0 -2px 0 2px black;
+}
+
 .cv section.head ul li:nth-child(2){
 	box-shadow: inset 1px 1px 0 #ffffff, inset -1px -1px 0 #808080,
 				inset 0 0 0 2px #cfd0c8,inset 1px 0 0 2px #cfd0c8,
 				inset -1px 0 0 2px #cfd0c8,inset 0px 1px 0 2px #cfd0c8, inset 0 1px 0 4px black
+}
+
+.cv section.head ul li:nth-child(2):active{
+	border-color: #404040;
+	border-bottom-color: #cfd0c8;
+	border-right-color: #cfd0c8;
+
+	box-shadow: inset 1px 1px 0 #808080, inset -1px -1px 0 #ffffff,
+				inset 0 0 0 2px #cfd0c8, inset 1px 0 0 2px #cfd0c8,
+				inset -1px 0 0 2px #cfd0c8, inset 0px 1px 0 2px #cfd0c8, inset 0 1px 0 4px black
 }
 
 .cv section.head ul li:nth-child(3){
@@ -265,27 +297,61 @@ header .links a:hover, header .links .current{
 	font-family: Verdana, sans-serif;
 }
 
-.cv ul{
+.cv section.head ul li:nth-child(3):active{
+	border-color: #404040;
+	border-bottom-color: #cfd0c8;
+	border-right-color: #cfd0c8;
+
+	box-shadow: inset 1px 1px 0 #808080, inset -1px -1px 0 #ffffff;
+}
+
+.cv > ul{
+	padding: 3px 0;
 	overflow: auto;
 }
 
 .cv > ul li{
-	padding: 6px;
+	cursor: default;
+	border: 1px solid;	
+	border-color: transparent;
+	padding: 3px;
 	float: left;
 	list-style: none;
 	color: #000000;
+
+	-webkit-touch-callout: none;
+	  -webkit-user-select: none;
+	   -khtml-user-select: none;
+		 -moz-user-select: none;
+		  -ms-user-select: none;
+			  user-select: none;
+}
+
+.cv > ul li:hover{
+	border-color: #ffffff;
+	border-bottom-color: #808080;
+	border-right-color: #808080;
+}
+
+.cv > ul li:active{
+	padding: 5px 1px 1px 5px;
+	border-color: #808080;
+	border-bottom-color: #ffffff;
+	border-right-color: #ffffff;
 }
 
 .cv section.textarea{
 	color: #000000;
-	padding: 4px;
+	padding: 17px 4px;
 	border: 1px solid;
-	border-color: #404040;
-	border-bottom-color: #cfd0c8;
-	border-right-color: #cfd0c8;
+	border-color: #808080;
+	border-bottom-color: #ffffff;
+	border-right-color: #ffffff;
 	background-color: #ffffff;
 
-	box-shadow: inset -1px -1px 0 #ffffff, inset 1px 1px 0 #808080;
+	-webkit-box-shadow: inset -1px -1px 0 #cfd0c8, inset 1px 1px 0 #404040;
+	   -moz-box-shadow: inset -1px -1px 0 #cfd0c8, inset 1px 1px 0 #404040;
+			box-shadow: inset -1px -1px 0 #cfd0c8, inset 1px 1px 0 #404040;
 }
 
 .cv section.textarea hr{	
@@ -299,6 +365,10 @@ header .links a:hover, header .links .current{
 }
 
 .cv section.textarea p{}
+
+.cv section.textarea ul li{
+	list-style: none;
+}
 
 .cv section.textarea ul li:before{
 	content: '...';
