--- a/webf1/coursework/css/style.css
+++ b/webf1/coursework/css/style.css
@@ -18,10 +18,10 @@ header{
 	z-index: 1337;
 	top: 0;
 	width: 100%;
-	background-color: rgb(181, 10, 42);	
+	background-color: rgba(181, 10, 42, 0.5);	
 	position: fixed;	
-	border-top: 10px solid rgb(211, 0, 42);
-	border-bottom: 10px solid rgb(211, 0, 42);
+	border-top: 10px solid rgba(211, 0, 42, 0.5);
+	border-bottom: 10px solid rgba(211, 0, 42, 0.5);
 
 	-webkit-box-shadow: 0 5px 0 rgba(0,0,0,0.1);
 	   -moz-box-shadow: 0 5px 0 rgba(0,0,0,0.1);
@@ -46,9 +46,9 @@ header h1{
 	float: right;
 	cursor: default;
 	font-size: 2.4em;
-	text-shadow: 1px 1px 0 rgb(211, 0, 42), 2px 2px 0 rgb(211, 0, 42),
-				 3px 3px 0 rgb(211, 0, 42), 4px 4px 0 rgb(211, 0, 42),
-				 5px 5px 0 rgb(211, 0, 42), 6px 6px 0 rgb(211, 0, 42);
+	text-shadow: 1px 1px 0 rgba(211, 0, 42, 0.5), 2px 2px 0 rgba(211, 0, 42, 0.5),
+				 3px 3px 0 rgba(211, 0, 42, 0.5), 4px 4px 0 rgba(211, 0, 42, 0.5),
+				 5px 5px 0 rgba(211, 0, 42, 0.5), 6px 6px 0 rgba(211, 0, 42, 0.5);
 }
 
 header .links{
@@ -66,15 +66,15 @@ header .links a{
 	font-size: 1.45em;
 	font-weight: bolder;
 
-	-webkit-box-shadow: 1px 1px 0 rgb(211, 0, 42), 2px 2px 0 rgb(211, 0, 42),
-						3px 3px 0 rgb(211, 0, 42), 4px 4px 0 rgb(211, 0, 42),
-						5px 5px 0 rgb(211, 0, 42), 6px 6px 0 rgb(211, 0, 42);
-	   -moz-box-shadow: 1px 1px 0 rgb(211, 0, 42), 2px 2px 0 rgb(211, 0, 42),
-						3px 3px 0 rgb(211, 0, 42), 4px 4px 0 rgb(211, 0, 42),
-						5px 5px 0 rgb(211, 0, 42), 6px 6px 0 rgb(211, 0, 42);
-			box-shadow: 1px 1px 0 rgb(211, 0, 42), 2px 2px 0 rgb(211, 0, 42),
-						3px 3px 0 rgb(211, 0, 42), 4px 4px 0 rgb(211, 0, 42),
-						5px 5px 0 rgb(211, 0, 42), 6px 6px 0 rgb(211, 0, 42);
+	-webkit-box-shadow: 1px 1px 0 rgba(211, 0, 42, 0.5), 2px 2px 0 rgba(211, 0, 42, 0.5),
+						3px 3px 0 rgba(211, 0, 42, 0.5), 4px 4px 0 rgba(211, 0, 42, 0.5),
+						5px 5px 0 rgba(211, 0, 42, 0.5), 6px 6px 0 rgba(211, 0, 42, 0.5);
+	   -moz-box-shadow: 1px 1px 0 rgba(211, 0, 42, 0.5), 2px 2px 0 rgba(211, 0, 42, 0.5),
+						3px 3px 0 rgba(211, 0, 42, 0.5), 4px 4px 0 rgba(211, 0, 42, 0.5),
+						5px 5px 0 rgba(211, 0, 42, 0.5), 6px 6px 0 rgba(211, 0, 42, 0.5);
+			box-shadow: 1px 1px 0 rgba(211, 0, 42, 0.5), 2px 2px 0 rgba(211, 0, 42, 0.5),
+						3px 3px 0 rgba(211, 0, 42, 0.5), 4px 4px 0 rgba(211, 0, 42, 0.5),
+						5px 5px 0 rgba(211, 0, 42, 0.5), 6px 6px 0 rgba(211, 0, 42, 0.5);
 
 	-webkit-transition: all 0.05s linear;
 	   -moz-transition: all 0.05s linear;
@@ -90,7 +90,11 @@ header .links a:hover, header .links .current{
 
 .home, .cv, .litreview{	
 	width: 900px;
-	margin: 115px auto;	
+	margin: 115px auto 0;	
+}
+
+.cv, .litreview{
+	margin-bottom: 100px;
 }
 
 /* Home */
@@ -195,6 +199,31 @@ header .links a:hover, header .links .current{
 	text-shadow: 0 1px 0 rgba(0,0,0,0.1),
 				 0 0 50px rgba(160, 245, 82, 0.5),
 				 0 0 100px rgba(255, 255, 255, 0.25);
+}
+
+.home .validatetile{
+	padding: 12px;	
+}
+
+.home .validatetile p{
+	color: #f5f5f5;
+	text-transform: uppercase;
+	font-size: 1.7em;
+	font-weight: bolder;
+	font-style: italic;
+	font-family: Helvetica, Arial, sans-serif;
+	text-shadow: 1px 1px 0 rgba(211, 0, 42, 0.25), 2px 2px 0 rgba(211, 0, 42, 0.25), 3px 3px 0 rgba(211, 0, 42, 0.25),
+			     4px 4px 0 rgba(211, 0, 42, 0.25), 5px 5px 0 rgba(211, 0, 42, 0.25), 6px 6px 0 rgba(211, 0, 42, 0.25);
+
+	-webkit-transition: all 0.05s linear;
+	   -moz-transition: all 0.05s linear;
+	     -o-transition: all 0.05s linear;
+	     	transition: all 0.05s linear;
+}
+
+.home .validatetile p:hover{
+	margin: 6px 0 0 6px;
+	text-shadow: none;
 }
 
 .home .videotile video{
