--- a/webf1/coursework/css/style.css
+++ b/webf1/coursework/css/style.css
@@ -39,13 +39,13 @@ header nav h1, header nav .links{
 	color: #FFFFFF;
 	text-align: center;
 	font-family: Helvetica, Arial, serif;
-	text-transform: uppercase;	
+	text-transform: uppercase;
 }
 
 header h1{
 	float: right;
 	cursor: default;
-	font-size: 2.4em;
+	font-size: 2em;
 	text-shadow: 1px 1px 0 rgba(211, 0, 42, 0.5), 2px 2px 0 rgba(211, 0, 42, 0.5),
 				 3px 3px 0 rgba(211, 0, 42, 0.5), 4px 4px 0 rgba(211, 0, 42, 0.5),
 				 5px 5px 0 rgba(211, 0, 42, 0.5), 6px 6px 0 rgba(211, 0, 42, 0.5);
@@ -370,6 +370,8 @@ header .links a:hover, header .links .current{
 }
 
 .cv section.textarea{
+	height: 500px;
+	overflow-y: scroll;
 	color: #000000;
 	padding: 17px 4px;
 	border: 1px solid;
