--- a/webf1/css/style.css
+++ b/webf1/css/style.css
@@ -14,7 +14,7 @@
 	   		box-sizing:border-box;
 }
 
-body{
+html, body{
 	color: rgba(0, 0, 0, 0.75);
 	background: rgb(80, 100, 100);
 }
@@ -177,7 +177,7 @@ header .links a:hover, header .links .current{
 
 .home .worklogtile{
 	padding: 8% 0;
-	background-image: url('img/darth_stripe.png'); /* Made by Ashton @ http://http://subtlepatterns.com */
+	background-image: url('../img/darth_stripe.png'); /* Made by Ashton @ http://http://subtlepatterns.com */
 	background-color: #23241f;
 	border: 1px solid #99ff66;
 	border-right: 0;
@@ -286,13 +286,13 @@ header .links a:hover, header .links .current{
 	list-style-type: none;
 }
 
-.cv section.head ul li:nth-child(1){
+.cv section.head ul li.min{
 	box-shadow: inset 1px 1px 0 #ffffff, inset -1px -1px 0 #808080,
 				inset 0 0 0 2px #cfd0c8,inset 2px 0 0 2px #cfd0c8,
 				inset -3px 0 0 2px #cfd0c8, inset 0 -2px 0 2px black;
 }
 
-.cv section.head ul li:nth-child(1):active{
+.cv section.head ul li.min:active{
 	border-color: #404040;
 	border-bottom-color: #cfd0c8;
 	border-right-color: #cfd0c8;
@@ -302,13 +302,13 @@ header .links a:hover, header .links .current{
 				inset -3px 0 0 2px #cfd0c8, inset 0 -2px 0 2px black;
 }
 
-.cv section.head ul li:nth-child(2){
+.cv section.head ul li.max{
 	box-shadow: inset 1px 1px 0 #ffffff, inset -1px -1px 0 #808080,
 				inset 0 0 0 2px #cfd0c8,inset 1px 0 0 2px #cfd0c8,
 				inset -1px 0 0 2px #cfd0c8,inset 0px 1px 0 2px #cfd0c8, inset 0 1px 0 4px black
 }
 
-.cv section.head ul li:nth-child(2):active{
+.cv section.head ul li.max:active{
 	border-color: #404040;
 	border-bottom-color: #cfd0c8;
 	border-right-color: #cfd0c8;
@@ -318,7 +318,7 @@ header .links a:hover, header .links .current{
 				inset -1px 0 0 2px #cfd0c8, inset 0px 1px 0 2px #cfd0c8, inset 0 1px 0 4px black
 }
 
-.cv section.head ul li:nth-child(3){
+.cv section.head ul li.close{
 	line-height: 10px;
 	text-align: center;
 	text-transform: uppercase;
@@ -326,12 +326,18 @@ header .links a:hover, header .links .current{
 	font-family: Verdana, sans-serif;
 }
 
-.cv section.head ul li:nth-child(3):active{
+.cv section.head ul li.close:active{
 	border-color: #404040;
 	border-bottom-color: #cfd0c8;
 	border-right-color: #cfd0c8;
 
 	box-shadow: inset 1px 1px 0 #808080, inset -1px -1px 0 #ffffff;
+}
+
+.cv section.head ul li.close a {
+	cursor: default;
+	color: #000000;
+	text-decoration: none;
 }
 
 .cv > ul{
@@ -561,9 +567,9 @@ header .links a:hover, header .links .current{
 	border-right: 0;
 	border-left: 0;
 
-	-webkit-box-shadow: inset 0 0 25px rgba(255,255,255,0.5), 0 0 10px rgba(0,0,0,0.25);
-	   -moz-box-shadow: inset 0 0 25px rgba(255,255,255,0.5), 0 0 10px rgba(0,0,0,0.25);
-	        box-shadow: inset 0 0 25px rgba(255,255,255,0.5), 0 0 10px rgba(0,0,0,0.25);
+	-webkit-box-shadow: inset 0 0 25px rgba(255,255,255,0.25), 0 0 10px rgba(0,0,0,0.25);
+	   -moz-box-shadow: inset 0 0 25px rgba(255,255,255,0.25), 0 0 10px rgba(0,0,0,0.25);
+	        box-shadow: inset 0 0 25px rgba(255,255,255,0.25), 0 0 10px rgba(0,0,0,0.25);
 }
 
 .worklog section.head{				
@@ -571,6 +577,7 @@ header .links a:hover, header .links .current{
 }			
 
 .worklog section.head h1{
+	cursor: default;
 	min-height: 50px;
 	padding-bottom: 10px;
 
@@ -581,10 +588,6 @@ header .links a:hover, header .links .current{
 	text-shadow: 0 1px 0 rgba(0,0,0,0.1),
 				 0 0 50px rgba(160, 245, 82, 0.5),
 				 0 0 100px rgba(255, 255, 255, 0.25);
-}
-
-.worklog section.head h1:hover{
-	opacity: 0.9;
 }
 
 .worklog nav{
