--- a/webf1/css/style.css
+++ b/webf1/css/style.css
@@ -202,10 +202,12 @@ header .links a:hover, header .links .current{
 }
 
 .home .validatetile{
-	padding: 12px;	
+	padding: 12px;
 }
 
-.home .validatetile p{
+.home .validatetile p{	
+	display: inline-block;	
+	padding: 0 6px 6px 0;
 	color: #f5f5f5;
 	text-transform: uppercase;
 	font-size: 1.7em;
@@ -215,15 +217,60 @@ header .links a:hover, header .links .current{
 	text-shadow: 1px 1px 0 rgba(211, 0, 42, 0.25), 2px 2px 0 rgba(211, 0, 42, 0.25), 3px 3px 0 rgba(211, 0, 42, 0.25),
 			     4px 4px 0 rgba(211, 0, 42, 0.25), 5px 5px 0 rgba(211, 0, 42, 0.25), 6px 6px 0 rgba(211, 0, 42, 0.25);
 
+
+}
+
+.home .validatetile a{
 	-webkit-transition: all 0.05s linear;
 	   -moz-transition: all 0.05s linear;
 	     -o-transition: all 0.05s linear;
 	     	transition: all 0.05s linear;
 }
 
-.home .validatetile p:hover{
-	margin: 6px 0 0 6px;
+.home .validatetile a:hover{
+	padding: 6px 0 0 6px;
 	text-shadow: none;
+}
+
+.home .imagetile img{
+	width: 200px;
+	height: 200px;
+	margin: 50px auto;
+	border: 10px solid #f5f5f5;
+
+	-webkit-animation: hueRotate 5s infinite linear;
+	   -moz-animation: hueRotate 5s infinite linear;
+	     -o-animation: hueRotate 5s infinite linear;
+	     	animation: hueRotate 5s infinite linear;
+
+}
+
+	@-webkit-keyframes hueRotate {
+	  from {  -webkit-filter: hue-rotate(0deg);   } 
+	  to {    -webkit-filter: hue-rotate(360deg); }
+	}
+
+	@-moz-keyframes hueRotate {
+	  from {  -moz-filter: hue-rotate(0deg);   } 
+	  to {    -moz-filter: hue-rotate(360deg); }
+	}
+
+	@-o-keyframes hueRotate {
+	  from {  -o-filter: hue-rotate(0deg);   } 
+	  to {    -o-filter: hue-rotate(360deg); }
+	}
+
+	@keyframes hueRotate {
+	  from {  filter: hue-rotate(0deg);   } 
+	  to {    filter: hue-rotate(360deg); }
+	}
+
+.home .imagetile img:hover{
+	-webkit-filter: sepia(0) hue-rotate(180deg);
+	   -moz-filter: sepia(0) hue-rotate(180deg);
+	    -ms-filter: sepia(0) hue-rotate(180deg);
+	     -o-filter: sepia(0) hue-rotate(180deg);
+	     	filter: sepia(0) hue-rotate(180deg);
 }
 
 .home .videotile video{
@@ -389,6 +436,10 @@ header .links a:hover, header .links .current{
 	-webkit-box-shadow: inset -1px -1px 0 #cfd0c8, inset 1px 1px 0 #404040;
 	   -moz-box-shadow: inset -1px -1px 0 #cfd0c8, inset 1px 1px 0 #404040;
 			box-shadow: inset -1px -1px 0 #cfd0c8, inset 1px 1px 0 #404040;
+}
+
+.cv section.textarea:focus{
+	outline: none;
 }
 
 .cv section.textarea hr{	
