--- a/webf1/css/style.css
+++ b/webf1/css/style.css
@@ -273,6 +273,7 @@ header .links a:hover, header .links .current{
 	height: 200px;
 	margin: 50px auto;
 	border: 10px solid #f5f5f5;
+	background-color: rgba(0, 0, 0, 0.35);
 
 	-webkit-animation: hueRotate 5s infinite linear;
 	   -moz-animation: hueRotate 5s infinite linear;
