Revert "Validation fixes"
This reverts commit 71e023060f4c1461c71134525caf91ef043f4a89.

--- a/webf1/css/style.css
+++ b/webf1/css/style.css
@@ -323,6 +323,13 @@ header .links a:hover, header .links .current{
 	  to {    filter: hue-rotate(360deg); }
 	}
 
+.home .imagetile img:hover{
+	-webkit-filter: sepia(0) hue-rotate(180deg);
+	   -moz-filter: sepia(0) hue-rotate(180deg);
+	    -ms-filter: sepia(0) hue-rotate(180deg);
+	     -o-filter: sepia(0) hue-rotate(180deg);
+	     	filter: sepia(0) hue-rotate(180deg);
+}
 
 .home .videotile video{
 	width: 100%;
@@ -362,6 +369,7 @@ header .links a:hover, header .links .current{
 	   -khtml-user-select: none;
 		 -moz-user-select: none;
 		  -ms-user-select: none;
+			  user-select: none;
 }
 
 .cv section.head h1{
@@ -456,6 +464,7 @@ header .links a:hover, header .links .current{
 	   -khtml-user-select: none;
 		 -moz-user-select: none;
 		  -ms-user-select: none;
+			  user-select: none;
 }
 
 .cv > ul li:hover{
