--- a/webf1/css/style.css
+++ b/webf1/css/style.css
@@ -144,8 +144,7 @@ header .links a:hover, header .links .current{
 	box-shadow: none;
 }
 
-.home, .cv, .litreview, .worklog{
-	display: block;
+.home, .cv, .litreview, .worklog{	
 	width: 900px;
 	margin: 115px auto 0;	
 }
@@ -545,23 +544,23 @@ header .links a:hover, header .links .current{
 				    	10px 10px 0 #fff6d9, 10px 10px 0 2px  rgba(0,0,0,0.15), inset 0 60px 0 #fff6d9, inset 0 -30px 0 #fff6d9;
 }
 
-.litreview article.text{
+.litreview section.text{
 	display: inline-block;
 	padding: 2em 4em;
 }
 
-.litreview article.text time{
+.litreview section.text time{
 	float: left;
 }
 
-.litreview article.text .name{
+.litreview section.text .name{
 	margin: 0;
 	float: right;
 	font-family: "Georgia", "Times New Roman", serif;
 	font-style: italic;
 }
 
-.litreview article.text h1{
+.litreview section.text h1{
 	text-align: center;
 	font-size: 1.2em;
 	line-height: 20px;
@@ -570,33 +569,33 @@ header .links a:hover, header .links .current{
 	color: rgba(0, 0, 90, 0.75);
 }
 
-.litreview article.text p, .litreview article.text aside.references ul li{
+.litreview section.text p, .litreview section.text aside.references ul li{
 	font-size: 1.125em;
 	margin-bottom: 20px;
 	line-height: 20px;
 }
 
-.litreview article.text p:before{
+.litreview section.text p:before{
 	content: '';
 	margin-left: 2em;			
 }
 
-.litreview article.text aside.references{
+.litreview section.text aside.references{
 	padding-top: 20px;
 }
 
-.litreview article.text aside.references h2{
+.litreview section.text aside.references h2{
 	line-height: 20px;
 	font-size: 1.2em;
 	margin-bottom: 20px;
 }
 
-.litreview article.text aside.references ul li{
+.litreview section.text aside.references ul li{
 	list-style-position: inside;
 	list-style-type: square;
 }
 
-.litreview article.text mark, .litreview article.text a{
+.litreview section.text mark, .litreview section.text a{
 	padding: 0 0.25em;
 
 	-webkit-border-radius: 25px 0px / 50px 0px;
@@ -604,17 +603,17 @@ header .links a:hover, header .links .current{
 			border-radius: 25px 0px / 50px 0px;
 }
 
-.litreview article.text mark a{
+.litreview section.text mark a{
 	background-color: rgba(255, 255, 0, 0.4);	
 }
 
-.litreview article.text a{	
+.litreview section.text a{	
 	color: rgba(0, 0, 0, 0.75);
 	text-decoration: none;
 	background-color: rgba(0, 255, 0, 0.4);	
 }
 
-.litreview article.text mark a:hover, .litreview article.text a:hover{
+.litreview section.text mark a:hover, .litreview section.text a:hover{
 	opacity: 0.9;
 
 	-webkit-box-shadow: 0 0 5px rgba(0,0,0,0.2);
@@ -622,12 +621,12 @@ header .links a:hover, header .links .current{
 	   		box-shadow: 0 0 5px rgba(0,0,0,0.2);
 }
 
-.litreview article.text strong{
+.litreview section.text strong{
 	font-weight: bolder;
 	font-style: normal;
 }
 
-.litreview article.text strong:hover{
+.litreview section.text strong:hover{
 	cursor: pointer;	
 	text-decoration: underline;
 }
