--- a/webf1/css/style.css
+++ b/webf1/css/style.css
@@ -555,6 +555,7 @@ header .links a:hover, header .links .current{
 	box-shadow: inset 1px 1px 0 #808080, inset -1px -1px 0 #ffffff;
 }
 
+
 /* litreview */
 
 .litreview, .home .litreviewtile{
@@ -565,7 +566,8 @@ header .links a:hover, header .links .current{
 				    	10px 10px 0 #fff6d9, 10px 10px 0 2px  rgba(0,0,0,0.15), inset 0 60px 0 #fff6d9, inset 0 -30px 0 #fff6d9;
        -moz-box-shadow: 0 0 0 2px rgba(0,0,0,0.15), 5px 5px 0 #fff6d9, 5px 5px 0 2px rgba(0,0,0,0.15),
 				    	10px 10px 0 #fff6d9, 10px 10px 0 2px  rgba(0,0,0,0.15), inset 0 60px 0 #fff6d9, inset 0 -30px 0 #fff6d9;
-			box-shadow: 0 0 0 2px rgba(0,0,0,0.15), 5px 5px 0 #fff6d9, 5px 5px 0 2px rgba(0,0,0,0.15), 10px 10px 0 2px  rgba(0,0,0,0.15), inset 0 60px 0 #fff6d9, inset 0 -30px 0 #fff6d9;
+			box-shadow: 0 0 0 2px rgba(0,0,0,0.15), 5px 5px 0 #fff6d9, 5px 5px 0 2px rgba(0,0,0,0.15),
+				    	10px 10px 0 #fff6d9, 10px 10px 0 2px  rgba(0,0,0,0.15), inset 0 60px 0 #fff6d9, inset 0 -30px 0 #fff6d9;
 }
 
 .litreview section.text{
