--- a/webf1/css/style.css
+++ b/webf1/css/style.css
@@ -237,9 +237,8 @@ header .links a:hover, header .links .current{
 	padding: 8% 0;
 	background-image: url('../img/darth_stripe.png'); /* Made by Ashton */
 	background-color: #23241f;
-	border: 1px solid #99ff66;
-	border-right: 0;
-	border-left: 0;
+	border-top: 1px solid #99ff66;
+	border-bottom: 1px solid #99ff66;
 
 	-webkit-box-shadow: inset 0 0 5px rgba(255,255,255,0.5), 0 0 10px rgba(0,0,0,0.25);
 	   -moz-box-shadow: inset 0 0 5px rgba(255,255,255,0.5), 0 0 10px rgba(0,0,0,0.25);
@@ -247,7 +246,7 @@ header .links a:hover, header .links .current{
 }
 
 .home .worklogtile h1{
-	padding: 10px 0;
+	padding: 10px;
 	border-top: 1px dotted rgba(255,255,255,0.25);
 	border-bottom: 1px dotted rgba(255,255,255,0.25);
 	text-align: center;
@@ -624,10 +623,9 @@ header .links a:hover, header .links .current{
 	margin: 20px auto;
 	padding: 15px 0px;
 	background-image: url('../img/darth_stripe.png'); /* Made by Ashton @ http://http://subtlepatterns.com */
-	background-color: #23241f;
-	border: 1px solid #99ff66;
-	border-right: 0;
-	border-left: 0;
+	background-color: #23241f;	
+	border-top: 1px solid #99ff66;
+	border-bottom: 1px solid #99ff66;
 
 	-webkit-box-shadow: inset 0 0 25px rgba(255,255,255,0.25), 0 0 10px rgba(0,0,0,0.25);
 	   -moz-box-shadow: inset 0 0 25px rgba(255,255,255,0.25), 0 0 10px rgba(0,0,0,0.25);
