--- a/webf1/css/style.css
+++ b/webf1/css/style.css
@@ -753,7 +753,7 @@ header .links a:hover, header .links .current{
 
 .worklog .post section.top span{
 	float: right;
-	padding: 0 10px;
+	padding: 0.5em 0.7em;
 	font-family: "Courier New", Courier, monospace;
 	font-size: 12px;
 	color: #f5f5f5;
