Added a few comments. Closes #8

--- a/webf1/css/style.css
+++ b/webf1/css/style.css
@@ -23,7 +23,7 @@ html, body{
 
 a{ outline: none; }
 
-.toTheTop{
+.toTheTop{ /* to the top triangle */
 	text-indent: -80085px;
 	position: fixed;
 	bottom: 25px;
