--- a/year2/webf2/logbook1/style.css
+++ b/year2/webf2/logbook1/style.css
@@ -18,7 +18,7 @@ header, footer{
 header h1, footer p{ text-align: center; }
 
 main{
-	background-color: #ccffcc;
+	background-color: #CCFFCC;
 	overflow: hidden;
 }
 
@@ -34,9 +34,22 @@ main{
 	border-left: 2px solid #000;
 }
 
+.content li{ list-style: inside; }
+
 nav{
 	width: 30%;
 	height: 100%; 
 }
 
-li{ list-style: inside; }
+nav li{	list-style: none; }
+
+nav li:hover{ opacity: .8; }
+
+nav li a{
+	display: block;
+	margin-bottom: 10px;
+	padding: 5px 10px;
+	text-decoration: none;
+	color: #130F14;
+	background: #D88BE7;
+}
