Added Order class

--- a/year2/adproc/coursework/src/pipesrus/Gui.form
+++ b/year2/adproc/coursework/src/pipesrus/Gui.form
@@ -109,6 +109,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Reset"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="resetButtonActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="orderScrollPane">
       <AuxValues>
