--- a/year2/adproc/coursework/src/pipesrus/popUp.form
+++ b/year2/adproc/coursework/src/pipesrus/popUp.form
@@ -34,12 +34,12 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="pipeSizeLengthLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      <Component id="pipeSizeDiameterLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="pipeSizeDiaLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                       <Component id="pipeSizeLengthTextField" alignment="0" max="32767" attributes="1"/>
-                                      <Component id="pipeSizeDiameterTextField" alignment="0" max="32767" attributes="1"/>
+                                      <Component id="pipeSizeDiaTextField" alignment="0" max="32767" attributes="1"/>
                                   </Group>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
@@ -56,9 +56,9 @@
                           </Group>
                           <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="pipeReinforcementCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="pipeReinforceCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="pipeChemResCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="pipeInsulationCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="pipeInsulCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Group type="102" alignment="0" attributes="0">
                                   <Group type="103" groupAlignment="1" attributes="0">
                                       <Component id="addButton" alignment="1" min="-2" max="-2" attributes="0"/>
@@ -97,8 +97,8 @@
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="pipeSizeDiameterLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="pipeSizeDiameterTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="pipeSizeDiaLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="pipeSizeDiaTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace pref="58" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
@@ -115,9 +115,9 @@
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
-                          <Component id="pipeInsulationCheckBox" min="-2" max="-2" attributes="0"/>
+                          <Component id="pipeInsulCheckBox" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
-                          <Component id="pipeReinforcementCheckBox" min="-2" max="-2" attributes="0"/>
+                          <Component id="pipeReinforceCheckBox" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
                           <Component id="pipeChemResCheckBox" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
@@ -141,12 +141,12 @@
     </Component>
     <Component class="javax.swing.JSpinner" name="pipeQuantitySpinner">
     </Component>
-    <Component class="javax.swing.JCheckBox" name="pipeReinforcementCheckBox">
+    <Component class="javax.swing.JCheckBox" name="pipeReinforceCheckBox">
       <Properties>
         <Property name="text" type="java.lang.String" value="Reinforcement"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pipeReinforcementCheckBoxActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pipeReinforceCheckBoxActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JCheckBox" name="pipeChemResCheckBox">
@@ -157,21 +157,21 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pipeChemResCheckBoxActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JTextField" name="pipeSizeDiameterTextField">
+    <Component class="javax.swing.JTextField" name="pipeSizeDiaTextField">
       <Properties>
         <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="1inches"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pipeSizeDiameterTextFieldActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pipeSizeDiaTextFieldActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="pipeInsulationCheckBox">
+    <Component class="javax.swing.JCheckBox" name="pipeInsulCheckBox">
       <Properties>
         <Property name="text" type="java.lang.String" value="Insulation"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pipeInsulationCheckBoxActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pipeInsulCheckBoxActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="addButton">
@@ -186,6 +186,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Discard"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="discardButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="pipeSizeLabel">
       <Properties>
@@ -201,7 +204,7 @@
         <Property name="toolTipText" type="java.lang.String" value="For all your pipe needs!"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="pipeSizeDiameterLabel">
+    <Component class="javax.swing.JLabel" name="pipeSizeDiaLabel">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="com.sun.beans.editors.FontEditor">
           <SerializedValue value="-84,-19,0,5,115,114,0,13,106,97,118,97,46,97,119,116,46,70,111,110,116,-59,-95,53,-26,-52,-34,86,115,3,0,6,73,0,25,102,111,110,116,83,101,114,105,97,108,105,122,101,100,68,97,116,97,86,101,114,115,105,111,110,70,0,9,112,111,105,110,116,83,105,122,101,73,0,4,115,105,122,101,73,0,5,115,116,121,108,101,76,0,20,102,82,101,113,117,101,115,116,101,100,65,116,116,114,105,98,117,116,101,115,116,0,21,76,106,97,118,97,47,117,116,105,108,47,72,97,115,104,116,97,98,108,101,59,76,0,4,110,97,109,101,116,0,18,76,106,97,118,97,47,108,97,110,103,47,83,116,114,105,110,103,59,120,112,0,0,0,1,65,64,0,0,0,0,0,12,0,0,0,0,112,116,0,6,68,105,97,108,111,103,120"/>
@@ -219,6 +222,9 @@
           </StringArray>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pipeColoursComboBoxActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JComboBox" name="pipeGradeComboBox">
       <Properties>
